# py_gitfs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  do_not_delete.md  my_test_file.md  setup.cfg  setup.py  this_is_head.md  todo.md  tox.ini
docs/: Makefile  conf.py  index.rst
fs_gitfs/: __init__.py  _gitfs.py  opener.py
fs_gitfs/tests/: test_gitfs.py
src/fs_gitfs/: __init__.py  _git.py  _gitfs.py  opener.py
tests/: test_git.py  test_gitfs.py
